[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
[workspace]
members = ["clousures_study","gather_study","life_cycle", "fanX_study","trait_study","path_study","panic_study","Result_enum"]
